--- a/less/main-content.less
+++ b/less/main-content.less
@@ -45,7 +45,7 @@ body, html {
                 padding: 2% 0%;
                 color: #F09B9B;
                 font-family: @font;
-                font-weight: bolder;
+                font-weight: bold;
 
                 @media @mobile {
                     font-size: 1em;
@@ -220,6 +220,8 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
 
+  
+
   @media @tablet {
       width: 95%;
   }
@@ -227,6 +229,7 @@ body, html {
   @media @mobile {
       width: 100%;
   }
+  
     
 
     h2 {
@@ -249,6 +252,15 @@ body, html {
         border: ;
         align-items: center;
         margin: auto;
+        line-height: 1;
+
+        word-break: break-word;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+        -webkit-hyphens: unset;
+        -moz-hyphens: unset;
+        -ms-hyphens: unset;
+        hyphens: unset;
 
 
         @media @tablet {
@@ -259,10 +271,12 @@ body, html {
            flex-direction: column;
            width: 100%;
         }
+
+      
         li {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: center;
             border: ;
             align-items: center;
             flex-direction: column;
@@ -271,9 +285,8 @@ body, html {
             background-color: rgba(224, 109, 82, 0.7);
             margin-top: 1%;
             padding: 4% 1%;
-        
-            
 
+         
             @media @tablet {
                 max-height: 50vh;
                 flex-wrap: wrap;
@@ -281,9 +294,7 @@ body, html {
                 margin: auto;
                 width: 39%;
                 margin-top: 1%;
-                
-                
-               
+           
             }
 
             @media @mobile {
@@ -314,6 +325,7 @@ body, html {
                 width: 50%;
                 border: ;
                 justify-content: center;
+                text-decoration: none;
 
                 @media @tablet {
                     max-height: 20vh
@@ -339,6 +351,7 @@ body, html {
                     
                     
                 }
+                
 
                 #git {
                     display: flex;
@@ -346,35 +359,69 @@ body, html {
                     border-radius: initial;
 
                     @media @tablet {
-                        max-height: 20vh;
+                        
                         width: 50%;
                         
                     }
                 }
+
+                #Dessa {
+                    display: flex;
+                    width: 45%;
+                    border-radius: initial;
+                   
+                    @media @tablet {
+                        width: 50%;
+                        margin-bottom: 8%;
+                        margin-top: 6%;
+                    }
+                    
+                } 
+                
             }
 
             p {
                 display: flex;
-                flex-wrap: wrap;
+                flex-wrap: nowrap;
                 flex-direction: column;
                 width: 98%;
                 text-align: center;
-                font-size: 130%;
-               
-               
+                text-justify: inter-character;
+                font-size: 80%;
+                justify-content: center;
+                align-items: center;
+                
+           
                 @media @tablet {
                     max-height: 20vh;
-                    font-size: 1rem;
+                    font-size: 80%;
                     text-align: center;
+                    
                     
                     
 
                     @media @mobile {
-                        color: ;
+                        font-size: 1.3em;
                     }
                 }
+                
+
+                a {
+                    color: rgba(251, 255, 0, 0.692);
+                }
+
+            
+                
 
             }
+
+           
+
+            
         }
+
+        
+        
     }
+    
 }
